# Cpp-Project-Template

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: c-cpp.yml
lib/: BUILD  demo.cc  demo.h  demo_test.cc
main/: BUILD  main.cc
